--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .env.staging
 .env.development
 .env.*.local
+.env.test
 
 # OS generated files
 .DS_Store
@@ -59,3 +60,4 @@ temp/
 test-results/
 test-output/
 build/
+
